--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
     "react-sticky-footer": "0.1.0-rc3",
     "resolve": "1.10.0",
