incorp initial productFilter with price range

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "material-icons": "^0.3.1",
     "material-icons-react": "^1.0.4",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -45,18 +45,20 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.8.6",
+    "react": "^16.12.0",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-rangeslider": "^2.2.0",
     "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
     "react-sticky-footer": "0.1.0-rc3",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
-    "terser-webpack-plugin": "1.2.3",
+    "terser-webpack-plugin": "^1.2.3",
     "ts-pnp": "1.1.2",
+    "typescript": "^3.7.5",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
